#938: fix alignment problems with spinner buttons

--- a/scss/components/input-group.scss
+++ b/scss/components/input-group.scss
@@ -48,7 +48,7 @@ $block: ns(input-group);
         -moz-appearance: textfield;
     }
     &__addon {
-        @include tn-type(-3, body, bold, normal);
+        @include tn-type(-2, body, bold, normal);
         color: tn-color(text, 3);
         padding: 0 tn-space(4);
         border-style: solid;
@@ -58,6 +58,7 @@ $block: ns(input-group);
         justify-content: center;
         display: flex;
         flex-direction: column;
+        font-size: .5rem; 
 
         //ELEMENT MODIFIERS ************
         //each mod MUST extend the element base
